# cdp-api

./: .gitignore  README.md  app.py  develop.py  example.config.py  pyproject.toml  requirements.txt  server.py
app/: __init__.py
app/api/blueprints/drug/: __init__.py
app/api/routes/: __init__.py  routes.py
app/database/: mongodb.py
app/models/: qrym_active_ingredients.py  qrym_companies.py  qrym_form.py  qrym_inactive_products.py  qrym_packaging.py  qrym_pharmaceutical_std.py  qrym_route.py  qrym_status.py  qrym_therapeutic_class.py
app/modules/: importer.py
app/utilities/: colors.py
src/api/blueprints/drug/: __init__.py
src/api/routes/: __init__.py
src/models/: __init__.py  qrym_active_ingredients.py  qrym_biosimilar.py  qrym_companies.py  qrym_drug_product.py  qrym_form.py  qrym_inactive_products.py  qrym_packaging.py  qrym_pharmaceutical_std.py  qrym_route.py  qrym_schedule.py  qrym_status.py  qrym_therapeutic_class.py  qrym_veterinary_species.py
src/modules/: importer.py
src/utilities/: memsnap.py
