[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "Dylan Nunns",email = "dylan@gnarledrootsystems.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "quart[dotenv] (>=0.20.0,<0.21.0)",
    "hypercorn (>=0.18.0,<0.19.0)",
    "quart-schema (>=0.22.0,<0.23.0)",
    "pymongo[srv] (>=4.15.4,<5.0.0)"
]

[tool.poetry]
packages = [
    {include = "api", from = "src"},
    {include = "routes", from = "src/api"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]

[tool.poetry.scripts]
dev = "develop:run"